# Exo-Geometrize

./: .gitignore  Cargo.toml  README.md  main.rs  test1.json
src/: main.rs
