[package]
name = "exolvl_test"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21"                    # For base64 encoding/decoding
exolvl = "0.6"                     # For Exolvl format (Replace with actual version or local path if custom)
flate2 = "1.0"                    # For gzip compression
image = "0.24"                    # For image processing (PNG encoding/decoding)
rand = "0.8"                      # For generating random numbers
uuid = { version = "1.1", features = ["v4"] }  # Ensure the v4 feature is enabled
chrono = "0.4"  
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"